setup/k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: banka-1
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: banka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/raf-si-2025/banka-1-frontend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
