setup/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: banka-1
spec:
  parentRefs:
    - name: banka-gw
      namespace: envoy-gateway-system
  hostnames:
    - banka-1.radenkovic.rs
  rules:
    - matches:
        - path: {type: PathPrefix, value: /nginx}   # promeni ovo /ngnix na sta god je u frontendu
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: api-gateway
          port: 80
    - matches:
        - path: {type: PathPrefix, value: /}    # za frontend
      backendRefs:
        - name: frontend
          port: 80


        # front da mi kaze koji endpoint gadjaju, i da naprave da mogu da stave da se definise koji je to endpoint
        # requestovi treba da idu na https://banka-1.radenkovic.rs/api/     gateway, bilo sta, u zavisnosti od kog servisa
